tests/NormalTests/paczka1/fuzzy1/40354088.err
Error in line 5: S866 S497 78,6
Error in line 14: qIKx S497 16,3
Error in line 34: S866 S595 84,2
Error in line 35: gvHMTJ S595 97,7
Error in line 38: gvHMTJ S497 58,8
